Grammer.txt
assign      : KEYWORD:VAR IDENTIFIER (EQUAL) bit-or

bit-or      : bit-xor ((BIT-OR) bit-xor)*

bit-xor     : bit-and ((BIT-XOR) bit-and)*

bit-and     : shift-expr ((BIT-AND) shift-expr)*

shift-expr  : expr ((LSHIFT|RSHIFT) expr)*

expr        : term ((PLUS|MINUS) term)*

term        : factor ((MUL|DIV|MOD) factor)*

factor      : (PLUS|MINUS) factor
            : bit-not

bit-not     : (BIT-NOT) bit-not
            : power

power       : atom (POW factor)*

atom        : INT|FLOAT|IDENTIFIER
            : LPAREN expr RPAREN
